raj_tym_infra/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tymfe
spec:
  selector:
    matchLabels:
      app: tymfe
  template:
    metadata:
      labels:
        app: tymfe
    spec:
      containers:
      - name: tymfe
        image: us-central1-docker.pkg.dev/devops-353009/devops-docker/raj_tym_fe:main
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
      - name: tymbe
        image: us-central1-docker.pkg.dev/devops-353009/devops-docker/raj_tym_api:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
